# soiie

./: README.md  TODO.md  example.sie  soiie.cabal  stack.yaml
app/: Main.hs
app/Control/Monad/: LLVM.hs
lib-rt/: soiie_lib.c  soiie_lib.h
src/Language/Soiie/: AST.hs  Codegen.hs  Emit.hs  Lexer.x  ParseMonad.hs  Parser.hs  Parser.y
src/Language/Soiie/Internal/: Codegen.hs  Lexer.x  ParseMonad.hs  Parser.y
