name:                soiie
version:             0.1.0.0
synopsis:            A compiler for a really simple toy language
description:         Please see README.md
homepage:            https://github.com/HMPerson1/soiie#readme
license:             GPL3
license-file:        LICENSE
author:              HMPerson1
maintainer:          hmperson1@gmail.com
copyright:           2016 HMPerson1
category:            Language
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Language.Soiie.Lexer
                     , Language.Soiie.Parser
                     , Language.Soiie.AST
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , array
  build-tools:         alex, happy
  default-language:    Haskell2010

executable soiie-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , soiie
                     , bytestring
  default-language:    Haskell2010

test-suite soiie-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , soiie
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/HMPerson1/soiie
