name:                soiie
version:             0.1.0.0
synopsis:            A compiler for a really simple toy language
description:         Please see README.md
homepage:            https://github.com/HMPerson1/soiie#readme
license:             GPL-3
license-file:        LICENSE
author:              HMPerson1
maintainer:          hmperson1@gmail.com
copyright:           2016 HMPerson1
category:            Language
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Language.Soiie.Parser
                     , Language.Soiie.AST
                     , Language.Soiie.Emit
  other-modules:       Language.Soiie.Internal.ParseMonad
                     , Language.Soiie.Internal.Lexer
                     , Language.Soiie.Internal.Parser
                     , Language.Soiie.Internal.Codegen
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , array
                     , recursion-schemes
                     , containers
                     , llvm-general-pure
                     , mtl
                     , lens
  build-tools:         alex, happy
  default-language:    Haskell2010

executable soiie-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Control.Monad.LLVM
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , soiie
                     , bytestring
                     , llvm-general-pure
                     , llvm-general
                     , mtl
                     , process
                     , either
                     , directory
  default-language:    Haskell2010

test-suite soiie-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , soiie
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/HMPerson1/soiie
